[package]
name = "rubigo"
version = "1.0.4"
authors = ["Navid <yaa110@gmail.com>"]
description = "Golang dependency tool and package manager"
homepage = "https://github.com/yaa110/Rubigo"
documentation = "https://github.com/yaa110/Rubigo"
repository = "https://github.com/yaa110/Rubigo"
readme = "README.md"
license = "MIT"

[dependencies]
git2 = "0.6"
json = "0.11"
clap = "2.27"
time = "0.1"
threadpool = "1.7"
num_cpus = "1.7"
futures = "0.1"
futures-cpupool = "0.1"
semver = "0.9.0"
regex = "0.2"
curl = "0.4"

[dev-dependencies]
tempdir = "0.3"

[profile.release]
debug = false
lto = true
debug-assertions = false
panic = 'unwind'
